2006-02-21  Nathaniel Smith  <njs@pobox.com>

	* work.cc (detach_node): This time for sure!

2006-02-21  Nathaniel Smith  <njs@pobox.com>

	* work.cc (detach_node): Oops, x != y != !(x == y).

2006-02-21  Nathaniel Smith  <njs@pobox.com>

	* work.cc (detach_node): Check if we are passed the root dir, and
	error out if so.

2006-02-21  Matt Johnston  <matt@ucc.asn.au>

	* commands.cc (pid_file): newline-terminate the pid

2006-02-21  Richard Levitte  <richard@levitte.org>

	* contrib/usher.cc (server::set_hosts): Erasing the list node that
	we're iterating on, then trying to go to the next node doesn't
	work.  Save the iterator, then increment it before erasing the
	node using the saved value.  No more segfaults.

2006-02-21  Matthew Gregan  <kinetik@orcon.net.nz>

	* sanity.hh: Work around roster_merge.cc compilation failure with
	GCC 3.4.

2006-02-20  Richard Levitte  <richard@levitte.org>

	* monotone.cc (cpp_main), options.hh, ui.cc (redirect_log_to),
	ui.hh (struct user_interface): Add --log option, to redirect the
	log lines to a file.

	* monotone.texi (OPTIONS): Document it.

	* po/sv.po: Translate help for this option to Swedish.

	* testsuite.at, tests/t_log_to_file.at: Test it.

2006-02-20  Matt Johnston  <matt@ucc.asn.au>

	* database.cc (remove_version): get rid of dangling deltas,
	don't try to put data or deltas if they already exist.
	* tests/t_db_kill_rev_locally_2.at: un-XFAIL

2006-02-20  Matthew Gregan  <kinetik@orcon.net.nz>

	* testsuite.at: Add an ADD_FILE variant that allows use of
	alternate databases.

	* tests/t_netsync_permissions.at: Missed some cases of the
	database locking race.

2006-02-19  Nathaniel Smith  <njs@pobox.com>

	* ChangeLog: Fixup after xxdiff lossage.

2006-02-19  Nathaniel Smith  <njs@pobox.com>

	* roster_merge.cc (make_lifecycle_objs): Fix test bug.

2006-02-19  Matthew Gregan  <kinetik@orcon.net.nz>

	* testsuite.at: Add a REVERT_TO variant that allows use of
	alternate databases.
